---
title: Roster Service Domain (PostgreSQL + pgvector)
---
classDiagram
    class RosterImage {
        +List~float~ embedding
        +Dict~str,Any~ metadata
        +Optional~str~ image_path
        +to_dict()
        +from_dict(data)
    }

    class RosterEntry {
        +str name
        +str display_name
        +str unique_id
        +List~RosterImage~ reference_images
        +Optional~List~float~~ aggregate_embedding
        +Dict~str,Any~ metadata
        +Optional~str~ created_timestamp
        +Optional~str~ updated_timestamp
        +int image_count
        +add_reference_image(image: RosterImage)
        +add_augmented_embedding(embedding: List~float~, source: str, observation_id: str, metadata: Dict)
        +to_dict()
        +from_dict(data)
    }

    class DataValidationPort {
        <<interface>>
        +validate_embedding(embedding: List~float~, model: str) List~str~
        +validation_config: Dict~str,Any~
    }

    class DataValidationAdapter {
        +validate_embedding(embedding: List~float~, model: str) List~str~
        +validation_config: Dict~str,Any~
    }

    class RosterStoragePort {
        <<interface>>
        +save_roster_entry(entry: RosterEntry, model: str) bool
        +load_roster_entries(model: str) List~RosterEntry~
        +get_roster_entry(unique_id: str, model: str) Optional~RosterEntry~
        +delete_roster_entry(unique_id: str, model: str) bool
        +roster_exists(model: str) bool
        +clear_roster(model: str) bool
        +get_storage_info(model: str) Dict~str,Any~
        +get_storage_description() str
    }

    class DatabaseRosterStorageAdapter {
        -Engine _engine
        -SessionMaker _Session
        -UUID tenant_id
        +save_roster_entry(entry: RosterEntry, model: str)
        +load_roster_entries(model: str)
        +get_roster_entry(unique_id: str, model: str)
        +delete_roster_entry(unique_id: str, model: str)
        +clear_roster(model: str)
        +roster_exists(model: str)
        +get_storage_info(model: str)
        +get_storage_description()
    }

    class PostgreSQLStorageAdapter {
        +connection_pool()
        +search_similar(vector: List~float~, model: str, top_k: int, threshold: float)
    }

    class SQLiteStorageAdapter {
        +__init__(database_url: str, tenant_id: str, echo: bool = False)
    }

    class RosterService {
        -RosterStoragePort roster_storage
        -DataValidationPort data_validator
        -Dict~str,List~RosterEntry~~ _cache
        +add_entry(name: str, embedding: List~float~, model: str, metadata, image_path) Optional~RosterEntry~
        +add_entries_bulk(entries: List~Dict~str,Any~~, model: str) List~str~
        +get_entries(model: str, use_cache: bool = True) List~RosterEntry~
        +get_entry(unique_id: str, model: str) Optional~RosterEntry~
        +update_entry(unique_id: str, model: str, embedding, metadata, image_path) bool
        +delete_entry(unique_id: str, model: str) bool
        +clear_roster(model: str) bool
        +get_entry_count(model: str) int
        +get_storage_info(model: str) Dict~str,Any~
    }

    RosterEntry "1" *-- "*" RosterImage : reference_images

    RosterStoragePort <|.. DatabaseRosterStorageAdapter
    DatabaseRosterStorageAdapter <|-- PostgreSQLStorageAdapter
    DatabaseRosterStorageAdapter <|-- SQLiteStorageAdapter

    DataValidationPort <|.. DataValidationAdapter

    RosterService --> RosterStoragePort
    RosterService --> DataValidationPort
